# nova-guest-agent

./: .gitignore  Dockerfile-agent  Dockerfile-api  README.md  requirements.txt  setup.cfg
contrib/: nova-guest-agent.conf
etc/nova-guest/: api-paste.ini  nova-guest-agent.conf  nova-guest.conf
nova_guest/: cache.py  exception.py  i18n.py  keystone.py  rpc.py  service.py  utils.py
nova_guest/actions/: api.py
nova_guest/agent/libvirt/: agent.py
nova_guest/agent/rpc/: client.py  config.py  server.py
nova_guest/api/: __init__.py  common.py  wsgi.py
nova_guest/api/middleware/: auth.py  fault.py
nova_guest/api/v1/: networking.py  router.py  utils.py
nova_guest/api/v1/views/: networking.py
nova_guest/cmd/: api.py  nova_guest_agent.py
nova_guest/metadata/: metadata.py
nova_guest/networking/: api.py
