[metadata]
name = nova-guest
summary = QEMU guest agent enablement in Nova
description-file =
    README.md
author = Cloudbase Solutions SRL
author-email = gsamfira@cloudbasesolutions.com
home-page = http://cloudbase.it
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    nova_guest

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    nova-guest-api = nova_guest.cmd.api:main
    nova-guest-agent = nova_guest.cmd.nova_guest_agent:main

[wheel]
universal = 1
